--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="work-sans">
+    <!-- header section start here -->
     <header>
+          <!-- nav section start here -->
+
           <nav class="navbar display-flex">
               <h1 class="nav-brand">G3 Architects</h1>
               <ul class="navbar-nav display-flex">
@@ -17,6 +20,28 @@
                   <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
               </ul>
           </nav>
+          <!-- hero-image section start here -->
+
+           <section class="hero-image-section display-flex">
+                  <div class="hero-image-container display-flex">
+                    <div class="hero-content">
+                        <h1 class="hero-title">Brand New <br> Group of Architects </h1>
+                        <p class="hero-description dark-2">
+                          There are many variations of passages of Lorem Ipsum available, 
+                          but the majority have suffered alteration in some form,
+                           by injected humour, or randomised words which don't look even
+                        </p>
+                        <button class="hero-btn primary-btn"><a class="link-style" href="#">Explore More</a></button>
+                    </div>
+                    <div class="hero-image">
+                        <img src="./images/banner.png" alt="three architechs picture">
+                    </div>  
+                  </div>
+           </section>
     </header>
+    <!-- main section start here -->
+    <main>
+        
+    </main>
 </body>
 </html>
