--- a/index.html
+++ b/index.html
@@ -41,7 +41,26 @@
     </header>
     <!-- main section start here -->
     <main>
-        
+        <!-- our-teams section start here -->
+         <section class="our-teams-section ">
+              <div class="our-teams-container display-flex">
+                <div class="our-teams-images">
+                     <div class="our-teams-image"><img src="./images/team1.png" alt="three team members images"></div>
+                     <div class="our-teams-image"><img src="./images/team2.png" alt="three team members images"></div>
+                     <div class="our-teams-image"><img src="./images/team3.png" alt="three team members images"></div>
+                     <div class="our-teams-image"><img src="./images/team4.png" alt="three team members images"></div>
+                </div>
+                 <div class="our-teams-content">
+                     <h2 class="our-teams-title"><span class="quick-list dark-2">Quick list</span> of Our<span class="primary-color"> Features</span></h2>
+                     <p class="our-teams-description dark-2">
+                        There are many variations of passages of Lorem Ipsum available, 
+                        but the majority have suffered alteration in some form,
+                         by injected humour, or randomised words which don't look even
+                     </p>
+                     <button class="our-teams-btn primary-btn"><a class="link-style" cla href="#">Explore More</a></button>
+                 </div>
+              </div>
+         </section>
     </main>
 </body>
 </html>
