--- a/index.html
+++ b/index.html
@@ -61,6 +61,51 @@
                  </div>
               </div>
          </section>
+         <!-- features section start here -->
+          <section class="feature-section display-flex">
+               <div class="feature-content">
+                   <h2 class="feature-title">Features you will <br> love & enjoy</h2>
+                   <p class="feature-description dark-2">
+                    There are many variations of passages of Lorem Ipsum available, 
+                    but the majority have suffered alteration in some form,
+                     by injected humour, or randomised words which don't look even
+                   </p>
+                   <div class="feature-cards">
+                       <div class="feature-card">
+                          <h2 class="feature-card-title">Dexktop & Mobile Version</h2>
+                          <p class="dark-2">There are many variations of passages of Lorem Ipsum available, 
+                            but the majority have suffered alteration in some form, 
+                            by injected humour, or randomised...........</p>
+                       </div>
+                       <div class="feature-card">
+                          <h2 class="feature-card-title">Drag & Drop Builder</h2>
+                          <p class="dark-2">There are many variations of passages of Lorem Ipsum available, 
+                            but the majority have suffered alteration in some form, 
+                            by injected humour, or randomised...........</p>
+                       </div>
+                       <div class="feature-card">
+                          <h2 class="feature-card-title">Awesome Modern Design</h2>
+                          <p class="dark-2">There are many variations of passages of Lorem Ipsum available, 
+                            but the majority have suffered alteration in some form, 
+                            by injected humour, or randomised...........</p>
+                       </div>
+                       <div class="feature-card">
+                          <h2 class="feature-card-title">Super Easy to Edit</h2>
+                          <p class="dark-2">There are many variations of passages of Lorem Ipsum available, 
+                            but the majority have suffered alteration in some form, 
+                            by injected humour, or randomised...........</p>
+                       </div>
+                   </div>
+               </div>
+               <div class="feature-image">
+                   <img src="./images/architect.png" alt="architect girl picture">
+                   <button class="feature-btn primary-btn">
+                    <a class="link-style" href="#">
+                        <span >10+ Year</span><br>Experience
+                    </a>
+                   </button>
+               </div>
+          </section>
     </main>
 </body>
 </html>
