sponsor section add

--- a/index.html
+++ b/index.html
@@ -106,6 +106,21 @@
                    </button>
                </div>
           </section>
+          <!-- sponsors section start here -->
+           <section class="sponsor-section">
+                <div class="sponsor-content">
+                    <h2 class="sponsor-title">Our Sponspors</h2>
+                    <p class="dark-2">There are many variations of passages of Lorem Ipsum available,
+                     but the majority have suffered alteration.</p>
+                </div>
+                <div class="sponsor-images display-flex">
+                    <div class="sponsor-image"><img src="./images/sponsors/amazon.png" alt=""></div>
+                    <div class="sponsor-image"><img src="./images/sponsors/figma.png" alt=""></div>
+                    <div class="sponsor-image"><img src="./images/sponsors/google.png" alt=""></div>
+                    <div class="sponsor-image"><img src="./images/sponsors/spotify.png" alt=""></div>
+                    <div class="sponsor-image"><img src="./images/sponsors/telerama.png" alt=""></div>
+                </div>
+           </section>
     </main>
 </body>
 </html>
