footer section add

--- a/index.html
+++ b/index.html
@@ -122,5 +122,11 @@
                 </div>
            </section>
     </main>
+    <!-- footer section start here -->
+     <footer>
+          <section class="footer-section">
+               <p class="dark-1">All rights reserved copyright@2024 startup landing page design by Sajjad hossain</p>
+          </section>
+     </footer>
 </body>
 </html>
